[tool.poetry]
name = "tela"
version = "0.1.0"
description = "Simple tools for teaching programming with graphics"
authors = ["Nilo Menezes <nilo@nilo.pro.br>"]
license = "GNU GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
